<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.quizexampleinterview.QuizMainActivity">
    <RelativeLayout
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <LinearLayout

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="8dp"


                    android:gravity="center"
                    android:orientation="vertical"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:layout_width="90dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="55dp"
                        android:src="@mipmap/login"
                        android:background="@drawable/shapelogin"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editTextsignemail"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="70dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/shapeemail"
                        android:drawableLeft="@drawable/ic_person_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="Email Id"
                        android:inputType="textEmailAddress"
                        android:padding="15dp"
                        android:singleLine="true"
                        android:textColor="@color/progressbarcolor"
                        android:textColorHighlight="@color/progressbarcolor"
                        android:textColorHint="@color/progressbarcolor"
                        android:textCursorDrawable="@null"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/editTextsignpass"
                        android:layout_width="300dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        android:textCursorDrawable="@null"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="8dp"
                        android:background="@drawable/shapeemail"
                        android:drawableLeft="@drawable/ic_lock_black_24dp"
                        android:drawablePadding="10dp"
                        android:hint="Password"
                        android:inputType="textPassword"
                        android:maxLength="15"
                        android:padding="15dp"
                        android:textColor="@color/progressbarcolor"
                        android:textColorHighlight="@color/progressbarcolor"
                        android:textColorHint="@color/progressbarcolor"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/editTextsignemail" />

                    <LinearLayout
                        android:layout_width="300dp"
                        android:layout_height="30dp"
                        android:layout_marginTop="10dp"
                        android:gravity="right"
                        android:orientation="horizontal">

<!--                        <androidx.appcompat.widget.SwitchCompat-->
<!--                            android:id="@+id/switch1"-->
<!--                            android:layout_width="70dp"-->
<!--                            android:layout_height="30dp"-->
<!--                            android:theme="@style/SCBSwitch"-->
<!--                            android:padding="8dp"-->
<!--                            />-->
<!--                        <TextView-->
<!--                            android:layout_width="wrap_content"-->
<!--                            android:text="Remember Me"-->
<!--                            android:layout_height="wrap_content"/>-->
                        <TextView
                            android:id="@+id/tvforgotpass"
                            android:layout_width="wrap_content"
                            android:text="Forgot Password?"
                            android:textColor="@color/progressbarcolor"
                            android:textStyle="bold"
                            android:layout_marginStart="10dp"
                            android:layout_height="wrap_content"/>
                    </LinearLayout>



                    <RelativeLayout
                        android:background="@drawable/selectorlogin"
                        android:layout_height="35dp"
                        android:layout_width="270dp"
                        android:layout_marginLeft="30dp"
                        android:layout_marginRight="30dp"
                        android:layout_marginTop="7dp"
                        android:layout_centerHorizontal="true"
                        android:id="@+id/button_login">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:textAppearance="?android:attr/textAppearanceMedium"
                            android:text="Login"
                            android:layout_centerInParent="true"
                            android:textStyle="bold"
                            android:typeface="serif"
                            android:textColor="#FFFFFF"
                            android:id="@+id/button_label"/>


                        <ProgressBar
                            android:layout_height="40dp"
                            android:layout_width="40dp"
                            android:layout_centerInParent="true"
                            android:id="@+id/mainProgressBar1"
                            android:alpha="0"/>
                    </RelativeLayout>
                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_marginTop="12dp"
                        android:layout_marginBottom="70dp"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Don't have an account?"
                            android:textColor="@color/progressbarcolor"
                            android:layout_marginRight="10dp"/>
                        <TextView
                            android:id="@+id/textviewsignup"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/signup"
                            android:clickable="true"
                            android:textColor="@color/progressbarcolor"
                            android:textStyle="bold"
                            android:textSize="16sp"
                            />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
