<resources>
    <string name="app_name">Quiz</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="signup"><u>Sign Up</u></string>
    <string name="desk_inst">Following quiz provides Multiple Choice Questions (MCQs) related to Android. You will have to read all the given answers and click over the correct answer. You can use Next Quiz button to check new set of questions in the quiz.</string>
</resources>
