<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.quizexampleinterview.QuizMainActivity">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:orientation="vertical">

<blink xmlns:android="http://schemas.android.com/apk/res/android"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:gravity="right"
       android:layout_alignParentEnd="true">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Timer"
        android:id="@+id/txtTimer"
        android:textSize="25sp"
        android:textStyle="normal|bold"
        android:layout_alignParentEnd="true"
        android:layout_weight="1"
        android:gravity="right"
        android:layout_margin="10dp"/>
</blink>
    <ProgressBar
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progressQuiz"
        android:layout_weight="1"
        android:max="10"/>

    <TextView
        android:text="1/10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtQno"
        android:layout_weight="1"
        android:gravity="center_horizontal"
        android:textColor="@color/progressbarcolor"
        android:textStyle="normal|bold"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="16dp">

        <TextView
            android:text="[ Q:1 ]"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:id="@+id/txtQueTitle"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            android:textColor="@color/progressbarcolor"
            android:layout_marginTop="10dp"/>

        <RadioGroup
            android:layout_width="336dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteX="104dp"
            android:id="@+id/rbGroup"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/txtQue"
            android:layout_marginTop="15dp">

            <RadioButton
                android:text="Option 1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbOption1"
                android:layout_weight="1"/>

            <RadioButton
                android:text="Option 2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbOption2"
                android:layout_weight="1"/>

            <RadioButton
                android:text="Option 3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbOption3"
                android:layout_weight="1"/>

            <RadioButton
                android:text="Option 4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/rbOption4"
                android:layout_weight="1"/>

        </RadioGroup>

        <TextView
            android:text="Que"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/txtQue"
            android:textStyle="normal|bold"
            android:textSize="20sp"
            android:textColor="@color/progressbarcolor"
            android:layout_alignBaseline="@+id/txtQueTitle"
            android:layout_alignBottom="@+id/txtQueTitle"
            android:layout_toEndOf="@+id/txtQueTitle"
            android:layout_marginLeft="10dp"/>
    </RelativeLayout>

    <Button
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Next"
        android:layout_weight="1"
        android:background="@drawable/ripple_button"
        android:layout_margin="10dp"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"/>

</LinearLayout>
</ScrollView>
