<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_quiz_desk_board"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.test.quizexampleinterview.QuizDeskBoardActivity">

    <TextView
        android:text="@string/desk_inst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:id="@+id/textView"
        android:textSize="18sp"
        android:textColor="@color/progressbarcolor"/>

    <Button
        android:text="Instruction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnInstruction"
        android:background="@drawable/ripple_button"
        android:textStyle="normal|bold"
        android:elevation="0dp"
        android:textColor="@android:color/white"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"/>

    <Button
        android:text="Start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnStart"
        android:background="@drawable/ripple_button"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"
        android:layout_alignParentStart="false"
        android:layout_alignParentBottom="false"
        android:layout_above="@+id/btnInstruction"
        android:layout_marginBottom="10dp"/>

</RelativeLayout>
