<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:title="Stop"
          android:id="@+id/mnuStop"
          android:icon="@drawable/ic_cancel"
        app:showAsAction="always"/>
    <item android:title="Logout"
        android:id="@+id/logout"
        android:icon="@drawable/ic_logout_svg"
        app:showAsAction="always"/>
</menu>