<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.test.quizexampleinterview.QuizMainActivity"
>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:orientation="vertical">

    <TextView
        android:id="@+id/txtScore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_gravity="center"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:text="Score"/>

    <TextView
        android:id="@+id/txtResult"
        android:layout_gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtScore"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:text="Result"
        android:textAppearance="@style/TextAppearance.AppCompat.Headline"/>

    <TextView
        android:id="@+id/txtGreetings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="107dp"
        android:text="Greetings"
        android:layout_gravity="center"
        android:textSize="30sp"
        android:textStyle="bold"
        android:layout_below="@+id/txtResult"
        android:layout_centerHorizontal="true"/>



    <TextView
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:layout_gravity="center"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtGreetings"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:ems="10"
         />

    <Button
        android:id="@+id/playagainbtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginStart="120dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="120dp"
        android:text="Play Again"

        android:background="@drawable/ripple_button"
        android:textColor="@android:color/white"
        android:textStyle="normal|bold"/>
    </LinearLayout>

</ScrollView>
